# coin-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: airflow.cfg
dags/: ping_dag.py
etl/ingest/src/: ingest_api.py
etl/ingest/test/: test_ingest_api.py
etl/ingest/test/data/: mock_coinmarketcap_data.json  mock_exchange_data.json
etl/store/src/: store_data.py
etl/test/integration/: test_ingest_api.py
etl/test/jupyter/: test_parquet_file.ipynb  test_transform.ipynb
etl/transform/src/: transform_data.py
etl/transform/test/: test_transform_data.py
store/: Dockerfile  alembic.ini  entrypoint.sh
store/alembic/versions/: fac39439494b_create_initial_table_creation.py
web/: Dockerfile
web/app/: main.py
